[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http2", "tcp"] }
hyper-rustls = { version = "0.23", default-features = false, features = ["http2", "rustls-native-certs", "tls12", "tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.23", features = ["macros"] }
