[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
rpc = { path = "../rpc" }
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
tw_core_ffi = { path = "../tw_core_ffi" }
